--- a/app/views/statics/prom_lp.html.slim
+++ b/app/views/statics/prom_lp.html.slim
@@ -1,3 +1,6 @@
+= content_for :head do
+  meta name="robots" content="noindex,nofollow"
+
 /! Thursday April 2 2015 TTL: 6 months
 ruby:
   url = "http://therealprom.herokuapp.com#{"?snapchat" if params[:snapchat]}"
@@ -5,4 +8,5 @@ ruby:
 .page-content
   .row
     .col-md-12
-      iframe src="#{url}" frameborder="0" style="width: 100%;  min-height: 700px; height: 1200px;"
+      .iframe-container
+        iframe src="#{url}" frameborder="0" style="width: 100%;  min-height: 700px; height: 1200px;"
