[copy][faqs] Update cancellation terms

--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -111,8 +111,10 @@
       h3 I’m in love with something that is out of stock in my size/in my favourite #{t('words.color')}. What can I do?
       p We can make to order! Simply make the purchase online and we will produce any item for you that is out of order. It will just take 7-10 extra days for a made-to-order item as opposed to an item that is currently in stock.
 
-      h3 Can I cancel my order?
-      p If you would like to cancel your order, please email team@fameandpartners.com immediately with your cancellation request and order #.
+      h3 Can I l my order?
+      p If you would like to l your order, please email team@fameandpartners.com immediately with your llation request and order #.
+      p If your dress is customised we cannot accept cancellations after 24 hours of purchasing. 
+      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund on your purchase and a 100% credit note for future purchases with Fame & Partners.
 
       h3 How can I track my order?
       p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section, which you can access when you are logged in. If you did not create a username/password or sign up when you purchased your dress, you will need to do so, to track your order.
