[feat] ability to show on in separate page

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -736,7 +736,7 @@
           position: relative;
           text-align: right;
           height: 34px;
-          background: url('_pink-stripe.png');
+          background: url('old_quiz/_pink-stripe.png');
           .tooltip {
             padding: 0 5px;
             font: 400 23px/34px $fontThree;
