[quiz][popup] small fixes

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -301,6 +301,7 @@
       font: 400 47px/0.8 $fontThree;
       text-align: center;
       padding-top: 4px;
+      margin: 0px;
       em { 
         text-transform: none;
         display: block;
