fix old style quiz popup

--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -754,6 +754,7 @@
         a {
           text-decoration: none;
           font-size: 31px;
+          color: #000;
         }
       }
       .prev {
