--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -58,6 +58,17 @@
 // @end Sign Up dialog
 // -----------------
 
+// Tmp style for old Style Quiz
+.vex-dialog-quiz {
+  .vex-content {
+    padding: 0;
+    width: 1100px;
+    height: 680px;
+  }
+}
+// @end Tmp style for old Style Quiz
+// -----------------
+
 .vex-theme-flat-attack.email-capture-modal {
 
   padding-top:13%;
