--- a/app/views/style_quiz/thanks.html.slim
+++ b/app/views/style_quiz/thanks.html.slim
@@ -2,12 +2,12 @@
   img src="http://tags.rtbidder.net/convert?sid=52564c2b8bc06f1060da2599" width="0" height="0" border="0" alt=""
 .steps-box
   .finish-slide style="overflow: hidden;"
-    h1 style="padding: 150px 0 50px 0;"
-      em THANKS BABE
-    h1.secondary
-      span
-        ' USE:
-        span.pink GURL20
-        ' AT CHECKOUT
-    .kiss
-    .icon-logo
+    .header
+      = image_tag "_quiz/gurl.png", width: 65
+      = image_tag "images/new-logo.svg", width: 220
+    h1 THANKS BABE
+    .secondary
+      ' USE:
+      strong 
+        ' GURL20
+      ' AT CHECKOUT
