[quiz] small markup fixes / caching / supporting multiple calls

--- a/app/views/style_quiz/thanks.html.slim
+++ b/app/views/style_quiz/thanks.html.slim
@@ -1,14 +1,13 @@
 .m-pixel
   img src="http://tags.rtbidder.net/convert?sid=52564c2b8bc06f1060da2599" width="0" height="0" border="0" alt=""
 .steps-box
-  .finish-slide
-    h1
-      em Creating your personalised store
-    .arrows-line-vertical
+  .finish-slide style="overflow: hidden;"
+    h1 style="padding: 150px 0 50px 0;"
+      em THANKS BABE
     h1.secondary
       span
-        ' THANKS BABE
-        span.pink $20 VOUCHER
-        ' USE GURL20 AT CHECKOUT
+        ' USE:
+        span.pink GURL20
+        ' AT CHECKOUT
     .kiss
     .icon-logo
