[quiz] added quiz link

--- a/app/views/boutique/show.html.slim
+++ b/app/views/boutique/show.html.slim
@@ -1,6 +1,6 @@
 ruby:
   if current_spree_user
-    user  = current_spre_user
+    user  = current_spree_user
   else
     user = OpenStruct.new(first_name: 'Your')
   end
