removed dev stuff

--- a/app/views/style_quiz/show.html.slim
+++ b/app/views/style_quiz/show.html.slim
@@ -39,8 +39,8 @@ css:
   .quiz-wrapper-box
     .quiz-box-inner
       / uncomment this to show thanks
-      = render :template => 'style_quiz/thanks.html.slim'
-      / .steps-box style="overflow: hidden;"
+      /= render :template => 'style_quiz/thanks.html.slim'
+      .steps-box style="overflow: hidden;"
         /.flash-notification.btn.pink.flash.message.hide
         .questions-count
           ' Q
