[bla][blah] Tweak copy

--- a/app/views/style_quiz/thanks.html.slim
+++ b/app/views/style_quiz/thanks.html.slim
@@ -5,9 +5,9 @@
     .header
       = image_tag "_quiz/gurl.png", width: 65
       = image_tag "images/new-logo.svg", width: 220
-    h1 THANKS BABE
+    h1 HEY, HERE'S $20 FOR YOU TO SPEND ON THE PERFECT DRESS!
     .secondary
       ' USE:
-      strong 
-        ' GURL20
+      strong
+        ' GURLQUIZ
       ' AT CHECKOUT
