Bridesmaid landing should be indexed

--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -1,4 +1,5 @@
-= render :partial => 'landing_pages/common'
+= content_for :inline_javascript do
+  = raw "$('.img-product').hoverable();"
 
 .page-content.index.bridesmaids
   .container.relative
