[feat][mkt] Rakuten with some tests and a service

--- a/app/views/spree/shared/_rakuten.html.slim
+++ b/app/views/spree/shared/_rakuten.html.slim
@@ -1,35 +1,2 @@
-ruby:
-  if current_site_version.is_usa?
-    mid = '40178'
-    cur = 'USD'
-  else
-    mid = '40212'
-    cur = 'AUD'
-  end
-
-  ord       = @order.number
-  skulist   = @order.line_items.collect{ |i| i.variant.sku || i.variant.product.sku }.join('|')
-  qlist     = @order.line_items.collect{ |i| i.quantity }.join('|')
-
-  # AU needs to account for gst
-  if current_site_version.is_australia?
-    amtlist   = @order.line_items.collect{ |i| ((i.price / 1.1) * 100).round.to_i }.join('|')
-  else
-    amtlist   = @order.line_items.collect{ |i| (i.price * 100).to_i }.join('|')
-  end
-
-  namelist  = @order.line_items.collect{ |i| i.variant.product.name }.join('|')
-
-  promo_total = @order.adjustments.where("originator_type = 'Spree::PromotionAction'").sum(:amount)
-
-  # promo_total is negative
-  if promo_total < 0
-    skulist  << "|Discount"
-    namelist << "|Discount"
-    qlist    << "|0"
-    amtlist  << "|#{(promo_total * 100).to_i}"
-  end
-
-  linkshare_url = "http://track.linksynergy.com/ep?mid=#{mid}&ord=#{ord}&skulist=#{skulist}&qlist=#{qlist}&amtlist=#{amtlist}&cur=#{cur}&img=1&namelist=#{namelist}"
-
-img src=linkshare_url
+- tracker = Marketing::RakutenTracker.new(@order, current_site_version)
+img src=tracker.url
