--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -9,6 +9,14 @@
     = render 'users/shared/tabs', active_tab: 'orders'
     .row
       .col-md-12
+        p
+          | Please contact
+          | &nbsp;
+          a href="mailto:team@fameandpartners.com" team@fameandpartners.com
+          | &nbsp;
+          | for your order tracking number.
+    .row
+      .col-md-12
         - if @orders.empty?
           p You have no orders
         - else
@@ -19,7 +27,7 @@
                 th Order date
                 th Status
                 th Payment state
-                th Shipping state
+                th Delivery state
                 th Total
             tbody
               - @orders.each do |order|
