[seo] Force canonical to be FQDN
- ip address will map to the fqdn

[seo] configatron for domain

--- a/app/views/landing_pages/_common.html.slim
+++ b/app/views/landing_pages/_common.html.slim
@@ -2,4 +2,4 @@
   = raw "$('.img-product').hoverable();"
 
 = content_for :head do
-  meta name="robots" content="noindex,nofollow"
+  meta name="robots" content="noindex, follow"
