--- a/app/views/statics/prom_lp.html.slim
+++ b/app/views/statics/prom_lp.html.slim
@@ -1,5 +1,5 @@
 = content_for :head do
-  meta name="robots" content="noindex,nofollow"
+  meta name="robots" content="noindex, follow"
 
 /! Thursday April 2 2015 TTL: 6 months
 ruby:
