--- a/app/views/layouts/blog.html.slim
+++ b/app/views/layouts/blog.html.slim
@@ -5,7 +5,7 @@ doctype html
     = auto_discovery_link_tag :rss, blog_rss_url
     = csrf_meta_tags
     = render 'spree/shared/google_analytics'
-    meta name="robots" content="noindex, nofollow"
+    meta name="robots" content="noindex, follow"
   
   body class="blog-layout #{controller_action_class}" id=(controller_action_id)
 
