--- a/app/views/products/search_results/show.html.slim
+++ b/app/views/products/search_results/show.html.slim
@@ -11,7 +11,7 @@ ruby:
     });"
 
 - content_for :head do
-  meta name="robots" content="noindex, nofollow"
+  meta name="robots" content="noindex, follow"
 
 = content_for :inline_javascript do
   = raw "$('.img-product').hoverable();"
