[fix][colour]: mint colour

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -194,6 +194,10 @@
         padding:0;
       }
 
+      .color-mint {
+        background-color: #91ffdb;
+      }
+
       .color-watermelon {
         background-color: #FF3366;
       }
