[chore][product view]: add copyright notice

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -162,6 +162,8 @@ ruby:
             .box.col-sm-4.no-padding
               = image_tag(item.image_url, :class => 'img-responsive')
 
+          p Images courtesy of Google
+
     .col-md-6.col-sm-12
       h3 The Story
 
