--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -157,14 +157,28 @@ z.list-group-item.customization-option  {
 }
 
 .inspiration {
+
+  p {
+    font-style: italic;
+    font-size: 12px;
+    color: #E5E5E5;
+  }
+
 	.row {
 		.box {
       position: relative;
 
-      &:hover .player-controls { opacity: 1;}
+      &:hover .player-controls {
+        opacity: 1;
+      }
+
       &.song-playing {
-        .fa-pause { display: inline-block;}
-        .fa-play { display: none;}
+        .fa-pause {
+          display: inline-block;
+        }
+        .fa-play {
+          display: none;
+        }
       }
 
       .player-controls {
