[quiz] redirect after quiz completion to page with recommended dressses

--- a/app/views/style_quiz/show.html.slim
+++ b/app/views/style_quiz/show.html.slim
@@ -11,7 +11,7 @@
     });
 
     window.onQuizCompleted = function() { 
-      //console.log('quiz completed')
+      window.parent.location = "#{ after_quiz_redirect_url }";
     };
 
     window.fbAsyncInit = function() {
