--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <div class="four columns">
+      <div class="six columns">
         <div class="field">
           <%= label_tag nil, t(:order_number) %>
           <%= f.text_field :number_cont %>
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="four columns">
+      <div class="omega size columns">
         <div class="field">
           <%= label_tag nil, t(:first_name_begins_with) %>
           <%= f.text_field :bill_address_firstname_start, :size => 25 %>
@@ -62,17 +62,30 @@
         </div>
       </div>
 
-      <div class="omega four columns">
+      <div class="alpha four columns">
+        <% sorry = "HUH? The Order and it's Shipments can each be in a DIFFERENT STATE! Sorry" %>
+        <%= label_tag nil, t(:order_shipment_state) %><abbr title="<%= sorry %>"> ?</abbr>
+        <%= f.select :shipment_state_eq, Spree::Order.select(:shipment_state).uniq.pluck(:shipment_state).compact.collect { |s| [t("shipment_states.#{s}"), s] }, {:include_blank => true}, :class => 'select2' %>
+      </div>
+
+      <div class="four columns">
+        <%= label_tag nil, t(:shipments_status) %><abbr title="<%= sorry %>"> ?</abbr>
+        <%= f.select :shipments_state_eq, Spree::Shipment.state_machines[:state].states.collect { |s| [t("shipment_states.#{s.name}"), s.value] }, {:include_blank => true}, :class => 'select2' %>
+      </div>
+
+      <div class="four columns">
         <div class="field checkbox">
           <label>
             <%= f.check_box :completed_at_not_null, {:checked => @show_only_completed}, '1', '' %>
             <%= t(:show_only_complete_orders) %>
           </label>
         </div>
+      </div>
 
+      <div class="omega four columns">
         <div class="field checkbox">
           <label>
-            <%= f.check_box :inventory_units_shipment_id_null, { }, '1', '0' %>
+            <%= f.check_box :inventory_units_shipment_id_null, {}, '1', '0' %>
             <%= t(:show_only_unfulfilled_orders) %>
           </label>
         </div>
