[chore][checkout]: remove text transform on inputs

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -140,6 +140,10 @@ h1.edit-title {
   background-color: #eeddf0;
 }
 
+input.form-control {
+  text-transform: none;
+}
+
 /*
   // added for quick reference only
   <link rel="stylesheet" href="stylesheets/styles.css">
