--- a/app/views/spree/admin/shared/_order_tabs.html.erb
+++ b/app/views/spree/admin/shared/_order_tabs.html.erb
@@ -27,6 +27,8 @@
         <% end %>
       <% end %>
     </dl>
+
+   <%= render partial: 'spree/admin/orders/factories', order: @order %>
   </header>
 
   <nav class="menu">
