--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -126,6 +126,7 @@
       <th><%= sort_link @search, :payment_state,  t(:payment_state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :shipment_state, t(:shipment_state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :email,          t(:email, :scope => 'activerecord.attributes.spree/order') %></th>
+      <th style="min-width:100px;"><%= sort_link @search, :customer_notes, 'Notes' %></th>
       <th><%= sort_link @search, :total,          t(:total, :scope => 'activerecord.attributes.spree/order') %></th>
       <th data-hook="admin_orders_index_header_actions" class="actions"></th>
     </tr>
@@ -139,6 +140,7 @@
       <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
       <td class="align-center"><span class="state <%= order.shipment_state %>"><%= link_to t("shipment_states.#{order.shipment_state}"), admin_order_shipments_path(order) if order.shipment_state %></span></td>
       <td><%= mail_to order.email %></td>
+      <td><%= order.customer_notes %></td>
       <td class="align-center"><%= order.display_total %></td>
       <td class='actions align-center' data-hook="admin_orders_index_row_actions">
         <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
