--- a/app/views/spree/admin/orders/show.html.erb
+++ b/app/views/spree/admin/orders/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_actions do %>
   <li>
-    <%= button_link_to t(:cancel), fire_admin_order_url(@order.number, { :e => 'cancel' }), :icon => 'icon-trash', :data => { :confirm => t(:are_you_sure) } if @order.can_cancel? %>  
+    <%= button_link_to t(:cancel), fire_admin_order_url(@order.number, { :e => 'cancel' }), :icon => 'icon-trash', :data => { :confirm => t(:are_you_sure) } if @order.can_cancel? %>
   </li>
   <li>
     <%= button_link_to t(:edit), edit_admin_order_url(@order.number), :icon => 'icon-edit' %>
@@ -16,7 +16,7 @@
     <fieldset class="alpha six columns no-border-bottom">
       <legend align="center"><%= t(:bill_address) %></legend>
       <div class="align-center">
-        <%= render :partial => 'spree/admin/shared/address', :locals => { :address => @order.bill_address } %>  
+        <%= render :partial => 'spree/admin/shared/address', :locals => { :address => @order.bill_address } %>
       </div>
     </fieldset>
   <% end %>
@@ -29,7 +29,16 @@
     </fieldset>
     <% end %>
 </div>
-
+<% if @order.customer_notes %>
+  <div class="row" style="text-align:center;clear:both;">
+    <fieldset class="omega twelve columns no-border-bottom" style="margin-left:0;">
+      <legend align="center">Customer Notes</legend>
+      <div class="align-center">
+        <%= @order.customer_notes %>
+      </div>
+    </fieldset>
+  </div>
+<% end %>
 <div data-hook="admin_order_show_details">
   <%= render :partial => 'spree/admin/shared/order_details', :locals => { :order => @order } %>
 </div>
