--- a/app/views/style_profiles/show.html.slim
+++ b/app/views/style_profiles/show.html.slim
@@ -1,5 +1,16 @@
-= content_for :inline_javascript do
-  | $('.img-product').hoverable();
+- content_for :head do
+  = stylesheet_link_tag     'application_redesign'
+  = javascript_include_tag  'application_redesign'
+
+- content_for :footer do
+  = render '/shared/marketing'
+  = render 'layouts/redesign/javascript'
+  = render '/shared/remarketing_tag'
+
+javascript:
+  $(document).ready(function(){
+    $('.img-product').hoverable();
+  });
 
 .user-style-profile-page-title
   .container
@@ -13,7 +24,7 @@
       .row.relative
         - products.each do |product|
           .col-md-3.col-xs-6.col-xxs-12.category--item
-            = link_to collection_product_path(product) do  
+            = link_to collection_product_path(product), target: '_blank' do  
               - if product.images.any?
                 = cropped_product_hoverable_image_tag(product)
             .details.text-center
