--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -25,7 +25,7 @@
 @import 'redesign/footer';
 
 @import "redesign/product/*";
-
+@import "redesign/stylesheets/*";
 @import 'redesign/forms';
 @import 'redesign/about';
 @import 'redesign/user';
