--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -52,11 +52,11 @@ ruby:
       .container-fluid.nav-menu-container
         .masthead.pull-left.hidden-xs
           = link_to '/' do
-            = image_tag src='images/new-logo.svg', :class => 'nav-logo', :alt => 'Fame &amp; Partners'
+            = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
         .masthead.pull-left.visible-xs
           = link_to '/' do
-            = image_tag src='images/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame &amp; Partners'
+            = image_tag src='images/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
         ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
           li.shop.menu-item
@@ -211,7 +211,7 @@ ruby:
                       = form_tag search_path, method: :get do
                         input.form-control id='input-search' name='q' placeholder=("Search here...") type="text"
                         span
-                          button.invis-fix Enter  
+                          button.invis-fix Enter
 
           li#cart-trigger.menu-item
             = link_to spree.checkout_path, class: 'menu-item--link' do
