--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -143,6 +143,12 @@ input.form-control {
   text-transform: none;
 }
 
+.select2, .select2-container, .select2-container--default, .selection, .select2-selection, .select2-selection--single ,.select2-selection__rendered, .select2-selection__arrow, .select2-selection__rendered, .select2-search__field, button, .btn{
+  &:focus {
+    outline:none;
+  }
+}
+
 /*
   // added for quick reference only
   <link rel="stylesheet" href="stylesheets/styles.css">
