--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -56,7 +56,7 @@ ruby:
 
         .masthead.pull-left.visible-xs
           = link_to '/' do
-            = image_tag src='images/logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
+            = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
         ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
           li.shop.menu-item
@@ -190,11 +190,10 @@ ruby:
               li.menu-item.hidden-xs.hidden-sm
                 = link_to wishlist_path, class: 'menu-item--link', id: 'moodboard-trigger' do
                   span.visible-sm
-                    = image_tag "images/Heart.svg"
+                    = image_tag "Heart.svg"
                   span.hidden-sm.hidden-xs#moodboard-counter
                     | Moodboard &nbsp;
-                    /| Moodboard: 0 &nbsp;
-                    /= "#{ current_user_moodboard.item_count }"
+
           li.shop.menu-item.account-dropdown
             = render "layouts/redesign/header/my_account_dropdown"
 
@@ -203,7 +202,7 @@ ruby:
               = image_tag "search.png"
             .search-bar.invis
               a.close-search href="#"
-                = image_tag "images/close.svg", alt: 'Close'
+                = image_tag "close.svg", alt: 'Close'
               .container-fluid.search-form
                 .col-md-6.col-md-offset-3
                   .col-md-10
