--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -1,6 +1,6 @@
-ruby: 
+ruby:
   shopping_bag_init = "
-    window.app.shopping_bag = new ShoppingBag({ 
+    window.app.shopping_bag = new ShoppingBag({
       cart: window.app.shopping_cart,
       overlay: '#shadow-layer',
       container: '#cart',
@@ -16,10 +16,10 @@ ruby:
   - if @cart.present?
     .cart--top.text-center
       .pull-left.close-cart
-        = image_tag "images/line-arrow.svg", class: "line-arrow arrow-bag", alt: 'Submit'
+        = image_tag "line-arrow.svg", class: "line-arrow arrow-bag", alt: 'Submit'
       .pull-right.close-cart
         span.cart
-          = image_tag 'images/Cart.svg', class: 'cart-icon'
+          = image_tag 'Cart.svg', class: 'cart-icon'
           span.cart-amount = @cart.item_count
       div
         h2.cart-title Shopping Bag
@@ -29,7 +29,7 @@ ruby:
         - @cart.products.each do |product|
           li
             = image_tag product.image.large, class: 'img-responsive pull-left cart-item-image'
-            a.fa.fa-close.pull-right.link-grey.remove-product href="#0" 
+            a.fa.fa-close.pull-right.link-grey.remove-product href="#0"
             span.qty = "#{ product.quantity}x"
             = product.name
             .price = product.price.display_price
