[mkt][tracking] Add fb tracking pixel

--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -80,6 +80,9 @@
   })();
   window._fbq = window._fbq || [];
   window._fbq.push(['track', '6021815151134', {'value':'0.00','currency':'AUD'}]);
+  window._fbq.push(['track', '6016695263696', {'value':'0.00','currency':'AUD'}]);
   </script>
   <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6021815151134&amp;cd[value]=0.00&amp;cd[currency]=AUD&amp;noscript=1" /></noscript>
+  <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6016695263696&amp;cd[value]=0.00&amp;cd[currency]=AUD&amp;noscript=1" /></noscript>  
+
 <% end %>
