[update][header]: add prom menu item

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -185,6 +185,10 @@ ruby:
           li.menu-item
             = link_to 'Blog', blog_path, class: 'menu-item--link'
 
+          li.menu-item
+            a.menu-item--link href="http://prom.fameandpartners.com"
+            | Prom Competition
+
         ul.secondary.pull-right
           - if Features.active?(:moodboard)
               li.menu-item.hidden-xs.hidden-sm
