--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -121,6 +121,7 @@
       <% else %>
         <th><%= sort_link @search, :created_at,   t(:created_at, :scope => 'activerecord.attributes.spree/order') %></th>
       <% end %>
+      <th><%= sort_link @search, :projected_delivery_date, 'Projected Delivery' %> </th>
       <th><%= sort_link @search, :number,         t(:number, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :state,          t(:state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :payment_state,  t(:payment_state, :scope => 'activerecord.attributes.spree/order') %></th>
@@ -132,9 +133,11 @@
     </tr>
   </thead>
   <tbody>
+
   <% @orders.each do |order| %>
-    <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= cycle('odd', 'even') %>">
+    <tr data-hook="admin_orders_index_rows" class="state-<%= order.delivery_state.downcase %> <%= cycle('odd', 'even') %>">
       <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
+      <td class="align-center"><%= l order.projected_delivery_date.to_date %></td>
       <td><%= link_to order.number, admin_order_path(order) %></td>
       <td class="align-center"><span class="state <%= order.state.downcase %>"><%= t("order_state.#{order.state.downcase}") %></span></td>
       <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
