[feat][header]: add link for prom competition

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -377,3 +377,8 @@ li.shop {
 		}
 	}
 }
+
+//fix for additional nav item
+.nav-menu .primary li.menu-item .menu-item--link, .nav-menu .secondary li.menu-item .menu-item--link {
+	height: auto;
+}
