[feat][home page slider]: add prom comp image to slider

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -2,13 +2,16 @@
   ul.rslides
     li
       a href="/dresses/graduation"
-        = image_tag "taste-of-fame.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
+        = image_tag "taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
+    li
+      a href="http://prom.fameandpartners.com"
+        = image_tag "prom-competition.jpg", alt: 'Prom Competition', class: 'img-responsive portrait-img'
     li
       a href="/prom-collection"
-        = image_tag "prom.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
+        = image_tag "prom.jpg", alt: 'Prom Collection', class: 'img-responsive portrait-img'
     li
       a href="/break-hearts-collection"
-        = image_tag "break-hearts.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
+        = image_tag "break-hearts.jpg", alt: 'Break Hearts not Bank Accounts collection', class: 'img-responsive portrait-img'
 
 /! Email Subscription
 #email-container.container-fluid.email-sub.text-center
